# briefcase-template

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  cookiecutter.json  cookiecutter_context.json  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit-update.yml  run_tests.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_app_template.py
tests/apps/: verify-none.config  verify-positdjango.config  verify-positstatic.config
{{ cookiecutter.app_name }}/: .gitignore  CHANGELOG  LICENSE  README.md  README.rst  pyproject.toml  setup.py
{{ cookiecutter.app_name }}/src/webapp/webapp/: asgi.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.app_name }}/src/{{ cookiecutter.app_name }}/resources/: {{ cookiecutter.app_name }}.icns
{{ cookiecutter.app_name }}/src/{{ cookiecutter.module_name }}/: __main__.py  app.py
{{ cookiecutter.app_name }}/tests/: test_app.py  {{ cookiecutter.module_name }}.py
{{ cookiecutter.app_name }}/{{ cookiecutter.app_name }}/: __init__.py  __main__.py  app.py
{{ cookiecutter.app_name }}/{{ cookiecutter.test_source_dir }}/: test_app.py  {{ cookiecutter.module_name }}.py
