[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "{{ cookiecutter.project_name }}"
bundle = "{{ cookiecutter.bundle }}"
version = "0.0.1"
url = "{{ cookiecutter.url }}"
license = "{{ cookiecutter.license }}"
author = '{{ cookiecutter.author }}'
author_email = "{{ cookiecutter.author_email }}"

[tool.briefcase.app.{{ cookiecutter.app_name }}]
formal_name = "{{ cookiecutter.formal_name }}"
description = "{{ cookiecutter.description }}"
icon = "src/{{ cookiecutter.module_name }}/resources/{{ cookiecutter.app_name }}"
sources = ['src/{{ cookiecutter.module_name }}']
requires = [
{%- if cookiecutter.gui_framework == 'PySide2' %}
    'pyside2==5.13.0',
{%- elif cookiecutter.gui_framework == 'PursuedPyBear' %}
    'ppb~=0.8.0',
{% endif -%}
]


[tool.briefcase.app.{{ cookiecutter.app_name }}.macOS]
requires = [
{%- if cookiecutter.gui_framework == 'Toga' %}
    'toga-cocoa>=0.3.0.dev18',
{% endif -%}
]

[tool.briefcase.app.{{ cookiecutter.app_name }}.linux]
requires = [
{%- if cookiecutter.gui_framework == 'Toga' %}
    'toga-gtk>=0.3.0.dev18',
{% endif -%}
]
{%- if cookiecutter.gui_framework == 'Toga' %}
system_requires = [
    'libgirepository1.0-dev',
    'libcairo2-dev',
    'libpango1.0-dev',
    'libwebkitgtk-3.0-0',
    'gir1.2-webkit-3.0',
]
{% endif -%}

[tool.briefcase.app.{{ cookiecutter.app_name }}.windows]
requires = [
{%- if cookiecutter.gui_framework == 'Toga' %}
    'toga-winforms>=0.3.0.dev18',
{% endif -%}
]

# Mobile deployments
[tool.briefcase.app.{{ cookiecutter.app_name }}.iOS]
requires = [
{%- if cookiecutter.gui_framework == 'Toga' %}
    'toga-iOS>=0.3.0.dev18',
{% endif -%}
]

[tool.briefcase.app.{{ cookiecutter.app_name }}.android]
requires = [
{%- if cookiecutter.gui_framework == 'Toga' %}
    'toga-android>=0.3.0.dev18',
{% endif -%}
]
